EPMRPP-121541: [TMS][UI][WS] Test Plans within Milestone are still visible in the dropdowns after deleting a milestone